<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SimulationActivity"
    android:background="@color/white_solid">

<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="25dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/menu"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="Select Algorithm">

            <AutoCompleteTextView
                android:id="@+id/autoCompleteText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="none"
                android:text="FIFO"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/reference_number"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="Enter page reference number like 1 2 3,...">

            <EditText
                android:id="@+id/et_reference_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:inputType="text"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/page_frame"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:hint="Enter page frame">

                <EditText
                    android:id="@+id/et_page_frames"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="SUBMIT" />


        </LinearLayout>

        <Button
            android:id="@+id/btn_show_graph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Graph"
            android:layout_marginTop="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:textSize="20sp"
            android:text="OUTPUT :"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="10dp"/>
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TableLayout
                android:id="@+id/table"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"/>
        </HorizontalScrollView>

        <TextView
            android:id="@+id/tvFaults"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_fault"
            android:fontFamily="@font/montserrat"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:visibility="gone"
            />

        <TextView
            android:id="@+id/tvHits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_hit"
            android:fontFamily="@font/montserrat"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:visibility="gone"
            />

        <TextView
            android:id="@+id/tvHitRatio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_hit_ratio"
            android:fontFamily="@font/montserrat"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:visibility="gone"
            />

        <TextView
            android:id="@+id/tvMissRatio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_miss_ratio"
            android:fontFamily="@font/montserrat"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:visibility="gone"
             />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>